<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_submit">确定</string>
    <string name="pickerview_year">年</string>
    <string name="pickerview_month">月</string>
    <string name="pickerview_day">日</string>
    <string name="pickerview_hours">时</string>
    <string name="pickerview_minutes">分</string>
    <string name="pickerview_seconds">秒</string>
    <string name="app_name">远程监管系统</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="mian_bottom_group_buy">项目</string>
    <string name="mian_bottom_merchant">工程</string>
    <string name="mian_bottom_meself">管理</string>
    <string name="mian_bottom_more">数据更新</string>
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">松开可以刷新</string>
    <string name="lastUpdateTime">最近更新：%s</string>
    <string name="load_full">已加载全部</string>
    <string name="more">加载中</string>
    <!-- 消除警告，可忽略 -->
    <string name="d">图片描述</string>
    <string name="submit">提交</string>
    <string name="cancel">取消</string>
    <string name="title_activity_group_buy_image_details">GroupBuyImageDetailsActivity</string>
    <string name="title_activity_today_new_order">TodayNewOrderActivity</string>
    <string name="title_activity_voucher_help">VoucherHelpActivity</string>
    <string name="no_data">没有合适的数据显示</string>
    <string name="title_activity_order">OrderActivity</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="name">工程列表</string>
    <string name="commit">完成</string>
    <string name="project">项目</string>
    <string name="riv_sedi_rec">采样记录表</string>
    <string name="btn_exit">退出</string>
    <string name="btn_add">添加</string>
    <string name="depart">单位：</string>
    <string name="number">编号：</string>
    <string name="digging">矿区：</string>
    <string name="recorder">记录人：</string>
    <string name="chief">负责人：</string>
    <string name="date">日期：   自    </string>
    <string name="date_end">     至    </string>
    <string name="btn_look">查看</string>
    <string name="project_Unit">单位名称：</string>
    <string name="project_Mining_Area">矿区：   </string>
    <string name="project_Num">编号：</string>
    <string name="project_Record_Person">记录人：</string>
    <string name="project_Chief">技术负责：</string>
    <string name="startTime">开始日期：</string>
    <string name="endTime">结束日期：</string>

</resources>